<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DrawerActivity"
    tools:showIn="@layout/app_bar_drawer"
    android:background="@drawable/as">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="146dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView55"
        android:text="@string/welcome"
        android:textColor="#000000"
        android:textSize="25sp"
        android:topLeftRadius="10dp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView55"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/main5"
        android:textColor="#000000"
        android:textSize="40sp"
        android:topLeftRadius="10dp"
        android:typeface="serif" />


    <Button
        android:id="@+id/button2"
        android:layout_width="119dp"
        android:layout_height="106dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="113dp"
        android:background="@drawable/log"
        android:bottomLeftRadius="10dp"
        android:bottomRightRadius="10dp"
        android:text="@string/profile"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="119dp"
        android:layout_height="106dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="193dp"
        android:background="@drawable/log"
        android:bottomLeftRadius="10dp"
        android:bottomRightRadius="10dp"
        android:text="@string/trips"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp" />

</RelativeLayout>