<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverProfile"
    android:background="@drawable/as">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/main66"
        android:textColor="#000000"
        android:textSize="25sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/main5"
        android:textColor="#000000"
        android:textSize="40sp"
        android:topLeftRadius="10dp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="152dp"
        android:text="@string/main61"
        android:textColor="#000000"
        android:textSize="25sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="247dp"
        android:text="@string/main64"
        android:textColor="#000000"
        android:textSize="25sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="114dp"
        android:text="@string/main68"
        android:textColor="#000000"
        android:textSize="25sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="160dp"
        android:text="@string/main67"
        android:textColor="#000000"
        android:textSize="25sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="204dp"
        android:text="@string/main65"
        android:textColor="#000000"
        android:textSize="25sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignTop="@+id/textView3"
        android:text="Name"
        android:textColor="#000000"
        android:textSize="25sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignTop="@+id/textView5"
        android:text="Phone"
        android:textColor="#000000"
        android:textSize="25sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignTop="@+id/textView6"
        android:text="Password"
        android:textColor="#000000"
        android:textSize="25sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignTop="@+id/textView7"
        android:text="Gender"
        android:textColor="#000000"
        android:textSize="25sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignTop="@+id/textView4"
        android:text="City"
        android:textColor="#000000"
        android:textSize="25sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignTop="@+id/textView9"
        android:text="CNIC"
        android:textColor="#000000"
        android:textSize="25sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignTop="@+id/textView15"
        android:text="ID"
        android:textColor="#000000"
        android:textSize="25sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="195dp"
        android:text="@string/main62"
        android:textColor="#000000"
        android:textSize="25sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="239dp"
        android:text="@string/main63"
        android:textColor="#000000"
        android:textSize="25sp"
        android:typeface="serif" />

    <Button
        android:id="@+id/btt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/log"
        android:bottomLeftRadius="10dp"
        android:bottomRightRadius="10dp"
        android:text="Edit"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp" />

</RelativeLayout>